# WavePool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  application.cpp  application.h  colorselect.cpp  colorselect.h  emitter.cpp  emitter.h  framework.cpp  framework.h  image.cpp  image.h  includes.h  main.cpp  readme.h  utils.cpp  utils.h  wavepool.cpp  wavepool.h
